Compiler/fasto/tests/scan_neg2.err
Type error: Scan: unexpected array element type bool, expected int at line 4, column 11